# z3c.recipe.compattest

./: .coveragerc  .gitignore  .meta.toml  .travis.yml  CHANGES.rst  CHANGES.txt  MANIFEST.in  README.rst  buildout.cfg  pyproject.toml  setup.py  tox.ini
src/z3c/recipe/: __init__.py
src/z3c/recipe/compattest/: README.txt  recipe.py  runner.py  runner.txt  testing.py  tests.py
src/z3c/recipe/compattest/tests/: test_doctests.py
